# chatbots

AI-UX-Case-Study/: Dockerfile  README.md  cloudbuild.yaml  package.json  tailwind.config.ts
AI-UX-Case-Study/app/: globals.css  layout.tsx  page.tsx
AI-UX-Case-Study/app/api/generate/: route.ts
AI-UX-Case-Study/components/: AccessibilityFeatures.tsx  ProgressiveDisclosure.tsx  PromptPlayground.tsx  UncertaintyDisplay.tsx
AI-UX-Case-Study/docs/: DECISIONS.md  METRICS.md
AI-UX-Case-Study/lib/: ai-client.ts  metrics.ts  utils.ts
AI-UX-Case-Study/scripts/: create_bigquery_table.sql
enterprise-invoice-agent/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
enterprise-invoice-agent/src/enterprise_invoice_agent/: __init__.py  __main__.py  app.py  config.py  graph.py  models.py  persistence.py  pydantic_ai_agent.py  security.py  state.py  tools.py  worker.py
ml-model-optimization/: cloudbuild.yaml
ml-model-optimization/benchmark_results/: benchmark_report.json
ml-model-optimization/config/: default.yaml
multimodal-rag-eval/: README.md  config.py  requirements.txt  run_api.bat  run_dashboard.bat
multimodal-rag-eval/api/: main.py
multimodal-rag-eval/app/: dashboard.py
multimodal-rag-eval/data/: sample_technical_doc.txt
multimodal-rag-eval/scripts/: ingest.py
multimodal-rag-eval/src/: __init__.py
multimodal-rag-eval/src/evaluation/: __init__.py  ragas_evaluator.py
multimodal-rag-eval/src/parsers/: __init__.py  fallback_parser.py  unstructured_parser.py
multimodal-rag-eval/src/rag/: __init__.py  hybrid_rag.py
