[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-invoice-agent"
version = "0.1.0"
description = "Self-correcting multi-agent system for automated invoice reconciliation with HITL and state persistence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic-ai>=0.0.14",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
